--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,3 +40,8 @@ th {
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
+.delete {
+  height: 20px;
+  width: 20px;
+  padding: 0px;
+}
