--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .big-style {
 	text-align: center;
-	background-image: url("../images/train.jpg");
+	background-image: url("../images/train_img.jpg");
 	background-size: 100%;
 }
 
